--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.3)
 project(hprose)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11")
 
 set(SOURCE_FILES
     hprose/io/HproseWriter.cpp)
@@ -9,3 +9,7 @@ set(SOURCE_FILES
 include_directories(".")
 
 add_library(hprose STATIC ${SOURCE_FILES})
+
+add_executable(HproseWriterTest hprose/io/test/HproseWriterTest.cpp)
+target_include_directories(HproseWriterTest PUBLIC "${GTEST_DIR}/include")
+target_link_libraries(HproseWriterTest hprose "${GTEST_DIR}/libgtest.a")
