--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ os:
   - osx
 addons:
   apt:
+    sources:
+    - cmake
+    - sourceline: 'ppa:george-edison55/cmake-3.x'
     packages:
     - cmake
 script: sh ./travis.sh
