--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,10 @@ compiler:
 os:
   - linux
   - osx
-addons:
-  apt:
-    sources:
-    - cmake
-    - sourceline: 'ppa:george-edison55/cmake-3.x'
-    packages:
-    - cmake
+before_install:
+  - sudo apt-get install software-properties-common
+  - sudo add-apt-repository ppa:george-edison55/cmake-3.x
+  - sudo apt-get update
+  - sudo apt-get install cmake
 script: sh ./travis.sh
-sudo: false
+sudo: require
