--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ before_install:
   - sudo apt-get install software-properties-common
   - sudo add-apt-repository -y ppa:george-edison55/cmake-3.x
   - sudo apt-get update
-  - sudo apt-get install cmake
+  - sudo apt-get upgrade cmake
 script: sh ./travis.sh
 sudo: require
