--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,10 @@ os:
   - linux
   - osx
 before_install:
+  - sudo apt-get remove cmake
   - sudo apt-get install software-properties-common
   - sudo add-apt-repository -y ppa:george-edison55/cmake-3.x
   - sudo apt-get update
-  - sudo apt-get upgrade cmake
+  - sudo apt-get install cmake
 script: sh ./travis.sh
 sudo: require
