--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ os:
 before_install:
   - sudo apt-get remove cmake
   - sudo apt-get install software-properties-common
-  - sudo add-apt-repository -y ppa:george-edison55/cmake-3.x
+  - sudo add-apt-repository -y ppa:george-edison55/precise-backports
   - sudo apt-get update
   - sudo apt-get install cmake
 script: sh ./travis.sh
