--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,23 @@
 language: cpp
 compiler:
-  - clang 3.5.0
-  - gcc 4.7
+  - clang
+  - gcc
 os:
   - linux
   - osx
+addons:
+ apt:
+   sources:
+   - ubuntu-toolchain-r-test
+   packages:
+   - gcc-4.7
+   - g++-4.7
+   - clang-3.5
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get remove cmake
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install software-properties-common
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo add-apt-repository -y ppa:george-edison55/precise-backports
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install cmake
+  - sudo apt-get remove cmake
+  - sudo apt-get install software-properties-common
+  - sudo add-apt-repository -y ppa:george-edison55/precise-backports
+  - sudo apt-get update
+  - sudo apt-get install cmake
 script: sh ./travis.sh
 sudo: require
