--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,21 @@
-language: cpp
-compiler:
-  - clang
-  - gcc
-os:
-  - linux
-  - osx
-before_install:
-  - sudo apt-get remove cmake
-  - sudo apt-get install software-properties-common
-  - sudo add-apt-repository -y ppa:george-edison55/precise-backports
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update
-  - sudo apt-get install cmake
-  - sudo apt-get install gcc-4.7
-  - sudo apt-get install clang-3.5
+language: generic
+os: osx
+matrix:
+  include:
+    - os: linux
+      env: COMPILER_NAME=gcc CXX=g++-5 CC=gcc-5
+      addons:
+        apt:
+          packages:
+            - g++-5
+          sources: &sources
+            - llvm-toolchain-precise-3.8
+            - ubuntu-toolchain-r-test
+    - os: linux
+      env: COMPILER_NAME=clang CXX=clang++-3.8 CC=clang-3.8
+      addons:
+        apt:
+          packages:
+            - clang-3.8
+          sources: *sources
 script: sh ./travis.sh
-sudo: require
