Added long type.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.2)
 project(hprose)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11 -lpthread")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11")
 
 set(SOURCE_FILES
     hprose/io/Writer.cpp)
@@ -12,4 +12,4 @@ add_library(hprose STATIC ${SOURCE_FILES})
 
 add_executable(WriterTest hprose/io/test/WriterTest.cpp)
 target_include_directories(WriterTest PUBLIC "${GTEST_DIR}/include")
-target_link_libraries(WriterTest hprose "${GTEST_DIR}/libgtest.a")
+target_link_libraries(WriterTest hprose pthread "${GTEST_DIR}/libgtest.a")
