--- a/.travis.yml
+++ b/.travis.yml
@@ -30,4 +30,5 @@ matrix:
         - sudo add-apt-repository -y ppa:george-edison55/precise-backports
         - sudo apt-get update
         - sudo apt-get install cmake
+        - sudo apt-get install libc++-dev
 script: sh ./travis.sh
