--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,10 @@ matrix:
         apt:
           packages:
             - clang-3.8
+            - libc++-dev
+            - libc++1
+            - libc++abi-dev
+            - libc++abi1
           sources: *sources
       before_install:
         - sudo apt-get remove cmake
@@ -30,5 +34,4 @@ matrix:
         - sudo add-apt-repository -y ppa:george-edison55/precise-backports
         - sudo apt-get update
         - sudo apt-get install cmake
-        - sudo apt-get install libc++-dev
 script: sh ./travis.sh
