--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,9 @@ matrix:
           packages:
             - clang-3.8
             - libc++-dev
-          sources: *sources
+          sources: &sources
+            - llvm-toolchain-precise-3.8
+            - ubuntu-toolchain-r-test
       before_install:
         - sudo apt-get remove cmake
         - sudo apt-get install software-properties-common
