--- a/.travis.yml
+++ b/.travis.yml
@@ -18,15 +18,15 @@ matrix:
         - sudo apt-get update
         - sudo apt-get install cmake
     - os: linux
+      dist: trusty
+      sudo: required
       env: COMPILER_NAME=clang CXX=clang++-3.8 CC=clang-3.8
       addons:
         apt:
           packages:
             - clang-3.8
             - libc++-dev
-          sources: &sources
-            - llvm-toolchain-precise-3.8
-            - ubuntu-toolchain-r-test
+          sources: *sources
       before_install:
         - sudo apt-get remove cmake
         - sudo apt-get install software-properties-common
