--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,9 @@ matrix:
         - sudo add-apt-repository -y ppa:george-edison55/precise-backports
         - sudo apt-get update
         - sudo apt-get install cmake
+        - curl -sSLo googletest-release-1.8.0.tar.gz https://github.com/google/googletest/archive/release-1.8.0.tar.gz
+        - tar xzf googletest-release-1.8.0.tar.gz
+        - cd googletest-release-1.8.0/googletest && cmake . && make && cd .. && cd ..
     - os: linux
       dist: trusty
       sudo: required
@@ -28,4 +31,8 @@ matrix:
             - libc++-dev
             - libc++abi-dev
           sources: *sources
+      before_install:
+        - curl -sSLo googletest-release-1.8.0.tar.gz https://github.com/google/googletest/archive/release-1.8.0.tar.gz
+        - tar xzf googletest-release-1.8.0.tar.gz
+        - cd googletest-release-1.8.0/googletest && cmake -DCMAKE_CXX_FLAGS="-I/usr/include/c++/v1 -stdlib=libc++ -lc++abi" . && make && cd .. && cd ..
 script: sh ./travis.sh
