--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ os: osx
 before_install:
   - curl -sSLo googletest-release-1.8.0.tar.gz https://github.com/google/googletest/archive/release-1.8.0.tar.gz
   - tar xzf googletest-release-1.8.0.tar.gz
-  - cd googletest-release-1.8.0/googletest && cmake -DCMAKE_CXX_FLAGS="-I/usr/include/c++/v1 -stdlib=libc++ -lc++abi" . && make && cd .. && cd ..
+  - cd googletest-release-1.8.0/googletest && cmake . && make && cd .. && cd ..
 matrix:
   include:
     - os: linux
