Added variant type for hprose.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,8 @@ set(SOURCE_FILES
     hprose/io/Reader.cpp
     hprose/io/decoders/BoolDecoder.cpp
     hprose/io/decoders/IntDecoder.cpp
-    hprose/util/Util.cpp)
+    hprose/util/Util.cpp
+    hprose/Variant.cpp)
 
 include_directories(".")
 
