--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ before_install:
   - curl -sSLo googletest-release-1.8.0.tar.gz https://github.com/google/googletest/archive/release-1.8.0.tar.gz
   - tar xzf googletest-release-1.8.0.tar.gz
   - cd googletest-release-1.8.0/googletest && cmake . && make && cd .. && cd ..
+  - curl -sSLo https://superb-sea2.dl.sourceforge.net/project/asio/asio/1.10.8 (Stable)/asio-1.10.8.tar.gz
+  - tar xzf asio-1.10.8.tar.gz
+  - cd asio-1.10.8 &&  ./configure --without-boost && make && make install && cd ..
 matrix:
   include:
     - os: linux
