--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,9 @@ matrix:
         - curl -sSLo googletest-release-1.8.0.tar.gz https://github.com/google/googletest/archive/release-1.8.0.tar.gz
         - tar xzf googletest-release-1.8.0.tar.gz
         - cd googletest-release-1.8.0/googletest && cmake . && make && cd .. && cd ..
+        - curl -sSLo asio-1.10.8.tar.gz https://superb-sea2.dl.sourceforge.net/project/asio/asio/1.10.8%20%28Stable%29/asio-1.10.8.tar.gz
+        - tar xzf asio-1.10.8.tar.gz
+        - cd asio-1.10.8 &&  ./configure --without-boost && make && make install && cd ..
     - os: linux
       dist: trusty
       sudo: required
@@ -42,4 +45,7 @@ matrix:
         - curl -sSLo googletest-release-1.8.0.tar.gz https://github.com/google/googletest/archive/release-1.8.0.tar.gz
         - tar xzf googletest-release-1.8.0.tar.gz
         - cd googletest-release-1.8.0/googletest && cmake -DCMAKE_CXX_FLAGS="-I/usr/include/c++/v1 -stdlib=libc++ -lc++abi" . && make && cd .. && cd ..
+        - curl -sSLo asio-1.10.8.tar.gz https://superb-sea2.dl.sourceforge.net/project/asio/asio/1.10.8%20%28Stable%29/asio-1.10.8.tar.gz
+        - tar xzf asio-1.10.8.tar.gz
+        - cd asio-1.10.8 &&  ./configure --without-boost && make && make install && cd ..
 script: sh ./travis.sh
