Added RawReader support.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set(SOURCE_FILES
         hprose/io/Writer.cpp
         hprose/io/Reader.cpp
         hprose/io/ByteReader.cpp
+        hprose/io/RawReader.cpp
         hprose/io/decoders/BoolDecoder.cpp
         hprose/io/decoders/IntDecoder.cpp
         hprose/io/decoders/StringDecoder.cpp
