--- a/.travis.yml
+++ b/.travis.yml
@@ -73,6 +73,27 @@ matrix:
         - tar xzf asio-1.10.8.tar.gz
         - cd asio-1.10.8 &&  ./configure --without-boost && make && sudo make install && cd ..
     - os: linux
+      env: COMPILER_NAME=gcc CXX=g++-4.7 CC=gcc-4.7
+      addons:
+        apt:
+          packages:
+            - g++-4.7
+          sources: &sources
+            - ubuntu-toolchain-r-test
+      before_install:
+        - sudo apt-get autoremove cmake
+        - sudo apt-get autoremove emacsen-common
+        - sudo apt-get install software-properties-common
+        - sudo add-apt-repository -y ppa:george-edison55/precise-backports
+        - sudo apt-get update
+        - sudo apt-get install cmake
+        - curl -sSLo googletest-release-1.8.0.tar.gz https://github.com/google/googletest/archive/release-1.8.0.tar.gz
+        - tar xzf googletest-release-1.8.0.tar.gz
+        - cd googletest-release-1.8.0/googletest && cmake . && make && cd .. && cd ..
+        - curl -sSLo asio-1.10.8.tar.gz https://superb-sea2.dl.sourceforge.net/project/asio/asio/1.10.8%20%28Stable%29/asio-1.10.8.tar.gz
+        - tar xzf asio-1.10.8.tar.gz
+        - cd asio-1.10.8 &&  ./configure --without-boost && make && sudo make install && cd ..
+    - os: linux
       env: COMPILER_NAME=clang CXX=clang++-4.0 CC=clang-4.0
       addons:
         apt:
